--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>"محمد أحمد ابراهيم"</title>
+        <title></title>
     </head>
+    <img src="https://img.youtube.com/vi/fhCdVkEwRHA/maxresdefault.jpg" class="img-thumbnail" alt="The Promoter"></img>
     <body>
         <script type="text/javascript">
             window.onload = function() {
