--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title></title>
+        <img src="https://img.youtube.com/vi/fhCdVkEwRHA/maxresdefault.jpg" class="img-thumbnail" alt="The Promoter">
     </head>
-    <img src="https://img.youtube.com/vi/fhCdVkEwRHA/maxresdefault.jpg" class="img-thumbnail" alt="The Promoter"></img>
     <body>
         <script type="text/javascript">
             window.onload = function() {
