--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <img src="https://img.youtube.com/vi/fhCdVkEwRHA/maxresdefault.jpg" class="img-thumbnail" alt="The Promoter">
+        <img src="" class="img-thumbnail" alt="The Promoter">
+        
+        <meta property="og:title" content="بوكو اكس 3 برو | العيوب | شو المشاكل الي حتقابلك؟">
+        <meta property="og:image" content="https://img.youtube.com/vi/fhCdVkEwRHA/maxresdefault.jpg">
+        <meta property="og:description" content="هي الحلقة هي الجزء التاني من المراجعة.. فيها عيوب بس.. شوف المميزات ورجاع
+اعمل لايك وشير وسبسكرايب">
+        <meta property="og:url" content="https://youtube.com/watch?v=fhCdVkEwRHA">
+        <meta name="twitter:card" content="shttps://img.youtube.com/vi/fhCdVkEwRHA/maxresdefault.jpg">
     </head>
     <body>
         <script type="text/javascript">
