--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <meta property="og:image" content="https://img.youtube.com/vi/fhCdVkEwRHA/maxresdefault.jpg">
         <meta property="og:description" content="هي الحلقة هي الجزء التاني من المراجعة.. فيها عيوب بس.. شوف المميزات ورجاع
 اعمل لايك وشير وسبسكرايب">
-        <meta property="og:url" content="https://youtube.com/watch?v=fhCdVkEwRHA">
-        <meta name="twitter:card" content="shttps://img.youtube.com/vi/fhCdVkEwRHA/maxresdefault.jpg">
+        <meta property="og:url" content="https://m7ammad-eb.github.io/Test7/">
     </head>
     <body>
         <script type="text/javascript">
