--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta property="og:title" content="بوكو اكس 3 برو | العيوب | شو المشاكل الي حتقابلك؟">
+        <meta property="og:type" content="video.movie" />
         <meta property="og:image" content="https://img.youtube.com/vi/fhCdVkEwRHA/default.jpg">
         <meta property="og:description" content="هي الحلقة هي الجزء التاني من المراجعة.. فيها عيوب بس.. شوف المميزات ورجاع
 اعمل لايك وشير وسبسكرايب">
