--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <meta charset="utf-8">
         <meta property="og:title" content="بوكو اكس 3 برو | العيوب | شو المشاكل الي حتقابلك؟">
         <meta property="og:type" content="video.movie" />
-        <meta property="og:image" content="https://img.youtube.com/vi/fhCdVkEwRHA/default.jpg">
+        <meta property="og:image" content="https://img.youtube.com/vi/fhCdVkEwRHA/maxresdefault.jpg">
+        <meta property="og:image:width" content="1280" />
+        <meta property="og:image:height" content="720" />
         <meta property="og:description" content="هي الحلقة هي الجزء التاني من المراجعة.. فيها عيوب بس.. شوف المميزات ورجاع
 اعمل لايك وشير وسبسكرايب">
         <meta property="og:url" content="https://youtube.com/watch?v=fhCdVkEwRHA">
