--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
                 var desktopFallback = "https://youtube.com/watch?v=fhCdVkEwRHA",
                 mobileFallback = "https://youtube.com/watch?v=fhCdVkEwRHA",
-                app = "vnd.youtube://fhCdVkEwRHA";
+                app = "youtube://fhCdVkEwRHA";
 
                 if( /Android|iPhone|iPad|iPod/i.test(navigator.userAgent) ) {
                     window.location = app;
