--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
                 app = "youtube://fhCdVkEwRHA";
 
                 if( /Android|iPhone|iPad|iPod/i.test(navigator.userAgent) ) {
-                    window.location = app;
-                    window.setTimeout(function() {
-                        window.location = mobileFallback;
+                    Intent videoIntent = new Intent(Intent.ACTION_VIEW);
+
+videoIntent.setData(https://youtube.com/watch?v=fhCdVkEwRHA);
+
+videoIntent.setClassName("com.google.android.youtube", "com.google.android.youtube.WatchActivity");
+
+startActivity(videoIntent);
                     }, 25);
                 } else {
                     window.location = desktopFallback;
