--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
                 var desktopFallback = "https://youtube.com/watch?v=fhCdVkEwRHA",
                 mobileFallback = "https://youtube.com/watch?v=fhCdVkEwRHA",
                 app = "youtube://fhCdVkEwRHA";
+                url = "https://youtube.com/watch?v=fhCdVkEwRHA"
 
                 if( /Android|iPhone|iPad|iPod/i.test(navigator.userAgent) ) {
-                    setTimeout(function () { window.location = "market://details?id=com.google.android.youtube"; }, 25);
-                    window.location = "vnd.youtube://www.youtube.com/watch?v=yourVideoId";
+                    Intent videoIntent = new Intent(Intent.ACTION_VIEW);
+                    videoIntent.setData(url);
+                    videoIntent.setClassName("com.google.android.youtube", "com.google.android.youtube.WatchActivity");
+                    startActivity(videoIntent);
                     }, 25);
                 } else {
                     window.location = desktopFallback;
