--- a/index.html
+++ b/index.html
@@ -13,30 +13,11 @@
     </head>
     <body>
         <script type="text/javascript">
-            window.onload = function() {
-
-                var desktopFallback = "https://youtube.com/watch?v=fhCdVkEwRHA",
-                mobileFallback = "https://youtube.com/watch?v=fhCdVkEwRHA",
-                app = "youtube://fhCdVkEwRHA";
-                url = "https://youtube.com/watch?v=fhCdVkEwRHA"
-
-                if( /Android|iPhone|iPad|iPod/i.test(navigator.userAgent) ) {
-                    Intent videoIntent = new Intent(Intent.ACTION_VIEW);
-                    videoIntent.setData(url);
-                    videoIntent.setClassName("com.google.android.youtube", "com.google.android.youtube.WatchActivity");
-                    startActivity(videoIntent);
-                    }, 25);
-                } else {
-                    window.location = desktopFallback;
-                }
-
-                function killPopup() {
-                    window.removeEventListener('pagehide', killPopup);
-                }
-
-                window.addEventListener('pagehide', killPopup);
-
-            };
+            var url = "https://youtube.com/watch?v=fhCdVkEwRHA";
+            Intent videoIntent = new Intent(Intent.ACTION_VIEW);
+            videoIntent.setData(url);
+            videoIntent.setClassName("com.google.android.youtube", "com.google.android.youtube.WatchActivity");
+            startActivity(videoIntent);
         </script>
     </body>
 </html>
