--- a/index.html
+++ b/index.html
@@ -12,20 +12,5 @@
         <meta property="og:url" content="https://youtube.com/watch?v=fhCdVkEwRHA">
     </head>
     <body>
-        <script type="text/javascript">
-{
-
-     Intent intent = new Intent(Intent.ACTION_VIEW, Uri.parse("vnd.youtube://fhCdVkEwRHA"));
-     intent.setFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
-     startActivity(intent);
-
-} catch (ActivityNotFoundException e) {
-
-    // youtube is not installed.Will be opened in other available apps
-
-    Intent i = new Intent(Intent.ACTION_VIEW, Uri.parse("https://youtube.com/watch?v=fhCdVkEwRHA"));
-    startActivity(i);
-}
-        </script>
-    </body>
+       <a href="intent://fhCdVkEwRHA/#Intent;scheme=vnd.youtube;package=com.google.android.youtube;S.browser_fallback_url=https://youtube.com/watch?v=fhCdVkEwRHA;end;">youtube or market</a>
 </html>
