--- a/index.html
+++ b/index.html
@@ -2,15 +2,31 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta property="og:title" content="بوكو اكس 3 برو | العيوب | شو المشاكل الي حتقابلك؟">
+        <meta property="og:title" content="بوكو اف 3 بعد شهر | اذا لسا ما اشتريت اسمع الخلاصة">
         <meta property="og:type" content="video.movie" />
-        <meta property="og:image" content="https://img.youtube.com/vi/fhCdVkEwRHA/maxresdefault.jpg">
+        <meta property="og:image" content="https://img.youtube.com/vi/q7LZPObAGVM/maxresdefault.jpg">
         <meta property="og:image:width" content="1280" />
         <meta property="og:image:height" content="720" />
-        <meta property="og:description" content="هي الحلقة هي الجزء التاني من المراجعة.. فيها عيوب بس.. شوف المميزات ورجاع
-اعمل لايك وشير وسبسكرايب">
-        <meta property="og:url" content="https://youtube.com/watch?v=fhCdVkEwRHA">
+        <meta property="og:description" content="المراجعات الطويلة كتير قليلة مشان هيك قررت انا اعملها.. بعد شهر كامل جايبلكون مراجعة بوكو اف 3 بكل ميزاته وعيوبه الي ممكن تواجهك.. اذا لسا ما اشتريت ولليوم متردد شوف هالفيديو وخود الخلاصة.">
+        <meta property="og:url" content="https://youtube.com/watch?v=q7LZPObAGVM">
     </head>
     <body>
-       <a href="intent://fhCdVkEwRHA/#Intent;scheme=vnd.youtube;package=com.google.android.youtube;S.browser_fallback_url=https://youtube.com/watch?v=fhCdVkEwRHA;end;">youtube or market</a>
+        <script type="text/javascript">
+            window.onload = function() {
+
+                var desktopFallback = "https://youtube.com/watch?v=q7LZPObAGVM",
+                mobileFallback = "https://youtube.com/watch?v=q7LZPObAGVM",
+                app = "vnd.youtube://q7LZPObAGVM";
+
+                if( /Android|iPhone|iPad|iPod/i.test(navigator.userAgent) ) {
+                    window.location = app;
+                    window.setTimeout(function() {
+                        window.location = mobileFallback;
+                    }, 25);
+                } else {
+                    window.location = desktopFallback;
+                }
+            };
+        </script>
+    </body>
 </html>
