--- a/index.html
+++ b/index.html
@@ -36,5 +36,38 @@
             };
         </script>
      Test
-    </body>
+<div class="" id='choice-section' style='display:none'>
+  <div class="dumbBoxWrap">
+    <div class="dumbBoxOverlay"> </div>
+    <div class="vertical-offset">
+      <div class="appBox" style="background-color: #ffffff;">
+        <a id="app-button" class="button app" href="vnd.youtube://www.youtube.com/watch?v=99OskrV310E&amp;fbclid=IwAR1T39_TCzR4_4u2aHUpnTnBUFlTQUCyV0_jytC7ei3BcyY_1KLH97E9iYY" style="background-color: #ffffff !important; border-color: #cc2900 !important;">
+          <div class="app-img-wrap"><img id="app-img" class="app-img" src='https://s3.amazonaws.com/urlg_production/apps/icons/6/small_128/lMoItBgdPPVDJsNOVtP26EKHePkwBg-PkuY9NOrc-fumRtTFP4XhpUNk_22syN4Datc?1609789532' style="border-color: #cccccc;"></div>
+          <span id="app-text" style="color: #cc2900 !important;">Open In App</span>
+        </a>
+
+        <a id="browser-button" class="button browser" href="https://youtu.be/99OskrV310E?fbclid=IwAR1T39_TCzR4_4u2aHUpnTnBUFlTQUCyV0_jytC7ei3BcyY_1KLH97E9iYY" style="background-color: #cc2900 !important;border-color: #cc2900 !important;">
+          <span id="browser-text" style="color: #ffffff !important;">Open In Browser</span>
+        </a>
+
+      </div>
+    </div>
+  </div>
+      <div id = "choicefooter">
+      <div class="footer_area"><!--START FOOTER-->
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div id="fspacing" >
+                <div class="footer text-center"><!--FOOTER-->
+                <p><a id="choice_page_link_to_urlg" href="https://app.urlgeni.us?utm_source=youtube%2FqJ7&amp;utm_medium=footer&amp;utm_campaign=btyb" target="_blank"><img width="136px" alt="Generate free deeplink URLs for your mobile app, or to your content in other apps (such as Instagram, Amazon, Facebook, Messenger, Google Maps, YouTube...) with URLgenius" src="/assets/logo-tracking-1c06e24709249c1d3bc9ab419e6ae5838e86eb7bd9068949af5dff7771b7b90e.png" /><a></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+</div>
 </html>
